<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.eee.taxibooking.activities.LogInActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="38dp"
        android:fontFamily="@font/didactfothic_regular"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/log_in_dsc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/didactfothic_regular"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/please_sign_in_to_your_account"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/bc_edit_text"
        android:fontFamily="@font/didactfothic_regular"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="22dp"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_in_dsc"
        tools:ignore="Autofill" />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/bc_edit_text"
        android:fontFamily="@font/didactfothic_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="22dp"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintTop_toBottomOf="@id/login_email"
        tools:ignore="Autofill" />


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:fontFamily="@font/didactfothic_regular"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textColor="@color/colorSecondaryText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_btn"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:padding="16dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/sign_in_with_google"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/sign_in_with_google"
        style="@style/google_button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_google"
        android:padding="16dp"
        android:text="@string/sign_in_with_google"
        app:layout_constraintBottom_toTopOf="@id/tv_sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/sign_in_with_google">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/didactfothic_regular"
            android:text="@string/don_t_have_an_account"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/didactfothic_regular"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:text="@string/sign_up"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
